# custom-bevy-template

./: Cargo.toml  README.md
src/: lib.rs
src/app/: config.rs  input.rs  mod.rs  setup.rs
src/camera/: mod.rs
src/entities/: mod.rs
src/entities/behaviours/: mod.rs
src/features/: mod.rs
src/features/behaviours/: mod.rs  movement.rs
src/features/camera/: mod.rs  setup.rs
src/scenes/: default.rs  mod.rs
src/scenes/manager/: mod.rs
src/utils/: mod.rs
