[package]
name = "game"
version = "0.1.0"
edition = "2024"
default-run = "game"

[profile.dev.package."*"]
opt-level = 3

[features]
webgl2 = []

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
debug = false

[dependencies]
bevy = "0.16.1"
leafwing-input-manager = "0.17.1"
